--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^7.0.1",
     "@types/node": "20.7.0",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.5.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
     "next": "13.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.2.2"
+    "typescript": "^5.2.2"
   }
 }
